# web_log_analyzer

./: .gitignore  config.py  main.py  pyproject.toml
src/: analyzer_config.py  log_analyzer.py
src/analyzer/: nginx_analyzer.py
src/config/: general.py  nginx.py
src/parser/: base_parser_strategy.py  nginx_parser.py
